# Crawl_DB

./: .gitignore  .pylintrc  .style.yapf  README.md  collect_scopes.py  cookie.json  fetch_runtime.py  get_actor_works.py  get_collect_actors.py  get_collect_scope_magnets.py  get_collect_scope_works.py  get_works_magnet.py  gui.py  gui_config.py  main.py  pyproject.toml  requirements-common.txt  requirements-mac.txt  requirements-win.txt  requirements.txt  schema.sql  storage.py  utils.py
.github/workflows/: lint.yml  release.yml
app/: __init__.py
app/collection/: __init__.py
app/collection/actors/: __init__.py  actor_magnets.py  actor_works.py  collect_actors.py  pipeline.py
app/core/: __init__.py  config.py  fetch_runtime.py  storage.py  utils.py
app/exporters/: mdcx_magnets.py
app/gui/: __init__.py  data_view.py  gui_config.py  main_window.py
tests/: test_collection_actors_imports.py  test_fetch_runtime.py  test_filter_modes.py  test_get_actor_works.py  test_get_collect_actors.py  test_get_works_magnet.py  test_gui_config_ini.py  test_gui_data_view.py  test_gui_export_copy.py  test_gui_interactions.py  test_html_scraper_fetch_html_source.py  test_no_legacy_wrappers.py  test_package_layout.py  test_release_packaging_config.py  test_soup_builder.py  test_storage_edit_works.py  test_utils.py  test_utils_logging.py
